--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body{
     flex-direction: row;
     height: 100vh;
     width: 100%;
-    /* background: linear-gradient(315deg,#ffffff,#d7e1ec); */
+    
+    background: linear-gradient(315deg,#ffffff,#d7e1ec);
 }
 
 .wrapper{
